none: clean up I18n files.